# AeglAntiSpamBot

./: .env.example  .gitignore  Cargo.toml
src/: actor_messages.rs  bot_messages.rs  challenge.rs  dispatcher.rs  interrogator.rs  main.rs  timer.rs
